CMAKE_MINIMUM_REQUIRED(VERSION 3.24)
SET(CMAKE_CXX_STANDARD 17)
PROJECT(rtcfg)
OPTION(BUILD_TEST "build tests" OFF)

INCLUDE(GNUInstallDirs)
INCLUDE_DIRECTORIES(include)

FIND_PACKAGE(OpenSSL REQUIRED)
FIND_PACKAGE(CURL CONFIG REQUIRED)
FIND_PACKAGE(nlohmann_json CONFIG REQUIRED)
FIND_PACKAGE(spdlog CONFIG REQUIRED)

file(GLOB_RECURSE SRCS src/**.cpp)

SET(DEPS
        CURL::libcurl
        OpenSSL::SSL OpenSSL::Crypto
        nlohmann_json::nlohmann_json
        spdlog::spdlog
)

ADD_LIBRARY(rtcfg ${SRCS})
TARGET_LINK_LIBRARIES(rtcfg PRIVATE ${DEPS})

# install
install(TARGETS ${PROJECT_NAME}
        EXPORT ${PROJECT_NAME}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/include/
        EXPORT ${PROJECT_NAME}
        DESTINATION include/rtcfg
        FILES_MATCHING PATTERN "*.h*")
install(EXPORT ${PROJECT_NAME}
        DESTINATION share/${PROJECT_NAME}
        FILE ${PROJECT_NAME}Config.cmake
        NAMESPACE ${PROJECT_NAME}::)

# test
IF (BUILD_TEST)
    INCLUDE(cmakes/sample.cmake)
    INCLUDE(cmakes/test.cmake)
    INCLUDE(cmakes/gtest.cmake)
ENDIF ()